# peer-discovery-demo

./: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: application.rs  async_runtime.rs  lib.rs  protocol.rs
crates/core/src/peer_discovery/: client.rs  constants.rs  mod.rs  protocol.rs  server.rs  socket.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
